// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`./ChoiceButton.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="w-[300px]"
    >
      <button
        class="txButton"
        data-testid="choice-btn"
        type="button"
      >
        <div
          class="iconBg"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-send size-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
            />
            <path
              d="m21.854 2.147-10.94 10.939"
            />
          </svg>
        </div>
        <div
          class="py-0.5"
        >
          <p
            class="m-0 text-base leading-6 font-bold"
            data-slot="typography"
            data-variant="paragraph"
          >
            Send tokens
          </p>
          <span
            class="m-0 text-sm leading-5 font-normal text-[var(--color-primary-light)]"
            data-slot="typography"
            data-variant="paragraph-small"
          >
            Send tokens to another address
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right ml-auto size-6 text-[var(--color-border-main)]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`./ChoiceButton.stories Disabled 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="w-[300px]"
    >
      <button
        class="txButton"
        data-testid="choice-btn"
        disabled=""
        type="button"
      >
        <div
          class="iconBg"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-send size-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
            />
            <path
              d="m21.854 2.147-10.94 10.939"
            />
          </svg>
        </div>
        <div
          class="py-0.5"
        >
          <p
            class="m-0 text-base leading-6 font-bold"
            data-slot="typography"
            data-variant="paragraph"
          >
            Send tokens
          </p>
          <span
            class="m-0 text-sm leading-5 font-normal text-[var(--color-primary-light)]"
            data-slot="typography"
            data-variant="paragraph-small"
          >
            Send tokens to another address
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right ml-auto size-6 text-[var(--color-border-main)]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`./ChoiceButton.stories NoDescription 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="w-[300px]"
    >
      <button
        class="txButton"
        data-testid="choice-btn"
        type="button"
      >
        <div
          class="iconBg"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-wallet size-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
            />
            <path
              d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
            />
          </svg>
        </div>
        <div
          class="py-0.5"
        >
          <p
            class="m-0 text-base leading-6 font-bold"
            data-slot="typography"
            data-variant="paragraph"
          >
            Connect wallet
          </p>
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right ml-auto size-6 text-[var(--color-border-main)]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`./ChoiceButton.stories WithChip 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="w-[300px]"
    >
      <button
        class="txButton"
        data-testid="choice-btn"
        type="button"
      >
        <div
          class="iconBg"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-left-right size-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 3 4 7l4 4"
            />
            <path
              d="M4 7h16"
            />
            <path
              d="m16 21 4-4-4-4"
            />
            <path
              d="M20 17H4"
            />
          </svg>
        </div>
        <div
          class="py-0.5"
        >
          <p
            class="m-0 text-base leading-6 font-bold"
            data-slot="typography"
            data-variant="paragraph"
          >
            Swap tokens
          </p>
          <span
            class="m-0 text-sm leading-5 font-normal text-[var(--color-primary-light)]"
            data-slot="typography"
            data-variant="paragraph-small"
          >
            Exchange one token for another
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right ml-auto size-6 text-[var(--color-border-main)]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <div
          class="chip"
        >
          New
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`./ChoiceButton.stories WithIconColor 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="w-[300px]"
    >
      <button
        class="txButton"
        data-testid="choice-btn"
        type="button"
      >
        <div
          class="iconBg"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus size-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
        </div>
        <div
          class="py-0.5"
        >
          <p
            class="m-0 text-base leading-6 font-bold"
            data-slot="typography"
            data-variant="paragraph"
          >
            Add funds
          </p>
          <span
            class="m-0 text-sm leading-5 font-normal text-[var(--color-primary-light)]"
            data-slot="typography"
            data-variant="paragraph-small"
          >
            Deposit funds into your Safe
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right ml-auto size-6 text-[var(--color-border-main)]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
